change post form  url

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <div class="contact-section">
                 <h1 class="title-section center">Contact us</h1>
                 <div class="contact-form">
-                    <form action="./post.html" method="post">
+                    <form action=" https://formdump.codeinstitute.net" method="post">
                         <table>
                             <tr>
                                 <td>
