--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <div class="contact-section">
                 <h1 class="title-section center">Contact us</h1>
                 <div class="contact-form">
-                    <form action=" https://formdump.codeinstitute.net" method="post">
+                    <form action="https://formdump.codeinstitute.net" method="post">
                         <table>
                             <tr>
                                 <td>
@@ -57,10 +57,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label for="s_name">Second Name:</label>
+                                    <label for="l_name">Last Name:</label>
                                 </td>
                                 <td>
-                                    <input type="text" name="second_name" id="s_name" required minlength="2"
+                                    <input type="text" name="last_name" id="l_name" required minlength="2"
                                         maxlength="20">
                                 </td>
                             </tr>
